--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,3 @@
-img {
-  height: 40%;
-  width: 30%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border: 3px solid white;
-}
-
 .container {
   height: 100vh;
   width: 100vw;
@@ -16,8 +8,14 @@ img {
   align-items: center;
 }
 .container img {
-  height: 40%;
-  width: 30%;
+  -o-object-position: center;
+     object-position: center;
   -o-object-fit: cover;
      object-fit: cover;
+  height: 40%;
+  width: 32%;
+  padding: 5px;
+}
+.container img:hover {
+  filter: brightness(120%);
 }/*# sourceMappingURL=style.css.map */
