--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,5 @@
 @import "var";
+@import "mixins";
 
 
 .container{
@@ -13,8 +14,13 @@
     }
 
     img{
-         height: 40%;
-         width: 30%;
-         object-fit: cover;
+        object-position: center;
+        object-fit: cover;
+        height: 40%;
+        width: 32%;
+        padding: $myPadding;
+        &:hover{
+            @include myFilter(120%);
+        }
     }
  }
